bk_ida/gccida/g1/probe_stack_range
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1959:25: error: use of undeclared identifier 'machine_mode'
v3 = convert_to_mode( ( machine_mode)v5, size, 1); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1964:24: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v6); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1976:32: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v11); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1983:32: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v13); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1989:32: error: use of undeclared identifier 'machine_mode'
v16 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v15); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1992:32: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), global_rtl[2], v18); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:1999:20: error: use of undeclared identifier 'machine_mode'
v17 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v17); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:2006:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/explow.c:2015:48: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( v17, v20, GTU, 0LL, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 1, v22); 
                                               ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/probe_stack_range/src/obj/explow.o] Error 1
